[gd_scene load_steps=37 format=3 uid="uid://dn113f26qpybx"]

[ext_resource type="Script" path="res://Entities/Animals/Cows_Common/cows_common.gd" id="1_kmjii"]
[ext_resource type="Texture2D" uid="uid://if5s5llyhwb0" path="res://Entities/Animals/Cows_Common/Art/baby__cow__black.png" id="2_rrjns"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="8_i0sqf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/guard.gd" id="8_tjaqo"]
[ext_resource type="Script" path="res://addons/godot_state_charts/all_of_guard.gd" id="9_6ldad"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="9_tv0ks"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="10_gu53n"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="11_umpmu"]
[ext_resource type="Script" path="res://addons/godot_state_charts/expression_guard.gd" id="12_kkh0m"]

[sub_resource type="Animation" id="Animation_ge8ky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mhhhe"]
resource_name = "bend_down"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_aqmjy"]
resource_name = "bend_side"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_3kben"]
resource_name = "drink_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_fx07b"]
resource_name = "drink_side"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_6kk0k"]
resource_name = "eat_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_0bsie"]
resource_name = "eat_side"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_tk0oc"]
resource_name = "idle_down"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_l17x0"]
resource_name = "idle_side"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j3itm"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_3iypd"]
resource_name = "walk_side"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ynhm4"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animal:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82gpg"]
_data = {
"RESET": SubResource("Animation_ge8ky"),
"bend_down": SubResource("Animation_mhhhe"),
"bend_side": SubResource("Animation_aqmjy"),
"drink_down": SubResource("Animation_3kben"),
"drink_side": SubResource("Animation_fx07b"),
"eat_down": SubResource("Animation_6kk0k"),
"eat_side": SubResource("Animation_0bsie"),
"idle_down": SubResource("Animation_tk0oc"),
"idle_side": SubResource("Animation_l17x0"),
"walk_down": SubResource("Animation_j3itm"),
"walk_side": SubResource("Animation_3iypd"),
"walk_up": SubResource("Animation_ynhm4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3env"]
size = Vector2(12.25, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b7of"]
size = Vector2(36.5, 30)

[sub_resource type="Resource" id="Resource_ykmwe"]
script = ExtResource("12_kkh0m")
expression = "active_partner_process"

[sub_resource type="Resource" id="Resource_vr65b"]
script = ExtResource("12_kkh0m")
expression = "find_partner == false"

[sub_resource type="Resource" id="Resource_vat0c"]
script = ExtResource("12_kkh0m")
expression = "partner != null"

[sub_resource type="Resource" id="Resource_e3wme"]
script = ExtResource("9_6ldad")
guards = Array[ExtResource("8_tjaqo")]([SubResource("Resource_ykmwe"), SubResource("Resource_vr65b"), SubResource("Resource_vat0c")])

[sub_resource type="Resource" id="Resource_jycxa"]
script = ExtResource("12_kkh0m")
expression = "need_water"

[sub_resource type="Resource" id="Resource_7lio6"]
script = ExtResource("12_kkh0m")
expression = "active_food_process"

[sub_resource type="Resource" id="Resource_k1hrr"]
script = ExtResource("12_kkh0m")
expression = "randf() < 0.33"

[sub_resource type="Resource" id="Resource_tvhey"]
script = ExtResource("9_6ldad")
guards = Array[ExtResource("8_tjaqo")]([SubResource("Resource_jycxa"), SubResource("Resource_7lio6"), SubResource("Resource_k1hrr")])

[sub_resource type="Resource" id="Resource_nb8v4"]
script = ExtResource("12_kkh0m")
expression = "need_food"

[sub_resource type="Resource" id="Resource_xp2oo"]
script = ExtResource("12_kkh0m")
expression = "active_food_process"

[sub_resource type="Resource" id="Resource_78jtl"]
script = ExtResource("12_kkh0m")
expression = "randf() < 0.33"

[sub_resource type="Resource" id="Resource_yh7pj"]
script = ExtResource("9_6ldad")
guards = Array[ExtResource("8_tjaqo")]([SubResource("Resource_nb8v4"), SubResource("Resource_xp2oo"), SubResource("Resource_78jtl")])

[node name="Cows Common" type="CharacterBody2D" groups=["cow"]]
collision_mask = 512
script = ExtResource("1_kmjii")
minute_between_partner = 10
path_to_texture = "res://Entities/Animals/Cows_Common/Art"

[node name="Animal" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_rrjns")
hframes = 4
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_82gpg")
}
autoplay = "idle_side"

[node name="Placeholder" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_o3env")

[node name="Hurt" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_0b7of")
debug_color = Color(0.977931, 0, 0.400226, 0.42)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("8_i0sqf")
initial_expression_properties = {
"find_partner": false,
"need_food": true,
"need_water": true,
"partner": null
}

[node name="Movement" type="Node" parent="StateChart"]
script = ExtResource("9_tv0ks")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Movement"]
script = ExtResource("10_gu53n")

[node name="To Partner" type="Node" parent="StateChart/Movement/Idle"]
script = ExtResource("11_umpmu")
to = NodePath("../../Join Partner")
guard = SubResource("Resource_e3wme")
delay_in_seconds = "0.0"

[node name="To Walk" type="Node" parent="StateChart/Movement/Idle"]
script = ExtResource("11_umpmu")
to = NodePath("../../Walk")
delay_in_seconds = "randf_range(2.0, 10.0)"

[node name="Walk" type="Node" parent="StateChart/Movement"]
script = ExtResource("10_gu53n")

[node name="To Drink" type="Node" parent="StateChart/Movement/Walk"]
script = ExtResource("11_umpmu")
to = NodePath("../../Drink")
guard = SubResource("Resource_tvhey")
delay_in_seconds = "randf_range(2.0, 10.0)"

[node name="To Eat" type="Node" parent="StateChart/Movement/Walk"]
script = ExtResource("11_umpmu")
to = NodePath("../../Eat")
guard = SubResource("Resource_yh7pj")
delay_in_seconds = "randf_range(2.0, 10.0)"

[node name="To Idle" type="Node" parent="StateChart/Movement/Walk"]
script = ExtResource("11_umpmu")
to = NodePath("../../Idle")
delay_in_seconds = "randf_range(2.0, 10.0)"

[node name="Eat" type="Node" parent="StateChart/Movement"]
script = ExtResource("10_gu53n")

[node name="To Idle" type="Node" parent="StateChart/Movement/Eat"]
script = ExtResource("11_umpmu")
to = NodePath("../../Idle")
delay_in_seconds = "randf_range(2.0, 10.0)"

[node name="Drink" type="Node" parent="StateChart/Movement"]
script = ExtResource("10_gu53n")

[node name="To Idle" type="Node" parent="StateChart/Movement/Drink"]
script = ExtResource("11_umpmu")
to = NodePath("../../Idle")
delay_in_seconds = "randf_range(2.0, 10.0)"

[node name="Join Partner" type="Node" parent="StateChart/Movement"]
script = ExtResource("10_gu53n")

[node name="To Idle" type="Node" parent="StateChart/Movement/Join Partner"]
script = ExtResource("11_umpmu")
to = NodePath("../../Idle")
delay_in_seconds = "randf_range(2.0, 10.0)"

[connection signal="ready" from="Animal" to="AnimationPlayer" method="play" binds= ["idle_side"]]
[connection signal="body_entered" from="Hurt" to="." method="_on_hurt_body_entered"]
[connection signal="state_entered" from="StateChart/Movement/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Movement/Walk" to="." method="_on_walk_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Movement/Walk" to="." method="_on_walk_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Movement/Eat" to="." method="_on_eat_state_entered"]
[connection signal="state_exited" from="StateChart/Movement/Eat" to="." method="_on_eat_state_exited"]
[connection signal="state_entered" from="StateChart/Movement/Drink" to="." method="_on_drink_state_entered"]
[connection signal="state_exited" from="StateChart/Movement/Drink" to="." method="_on_drink_state_exited"]
[connection signal="state_entered" from="StateChart/Movement/Join Partner" to="." method="_on_join_partner_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Movement/Join Partner" to="." method="_on_join_partner_state_physics_processing"]
